add image in campaign database.
